--- a/WebVisualizations/assets/styles.css
+++ b/WebVisualizations/assets/styles.css
@@ -1,100 +1,7 @@
 /* Styling for HTML elements */
 
-.jumbotron{
-    background-color: rgb(234, 235, 238);
-    border-color: #000000;
-}
-
-.header{
-    color: rgb(133, 223, 250);
-    font-family: "Impact", Helvetica, Arial, sans-serif;
-    font-size: 36px;
-    font-weight: 100;
-    line-height: 75px;
-    text-shadow: 0 0 3px #000000;
-    font-stretch: expanded;
-}
-
-.blue{
-    align-items: flex-start;
-    background-color: rgb(133, 223, 250);
-    background-image: linear-gradient();
-    border-radius: 20px;
-    border-style: solid;
-    border-width: 1px;
-    border-color: rgb(66, 68, 68);
-    vertical-align: middle;
-    
-}
-
-.yellow{
-    align-items: flex-start;
-    background-color: rgb(229, 198, 153);
-    background-image: linear-gradient();
-    border-radius: 6px;
-    border-style: solid;
-    border-width: 1px;
-    border-color: rgb(229, 198, 153);
-    vertical-align: middle;
-}
-
-.reg-font{
-    color:rgb(51, 51, 51);
-    font-family: "Muli", Helvetica, Arial, sans-serif;
-    font-size: 21px;
-    font-weight: 100;
-    line-height: 30px;
-}
-
-.reg-link{
-    text-align: right;
-    color: rgb(83, 83, 83);
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 21px;
-    font-weight: 400;
-    line-height: 30px;
-}
- @media (max-width: 1100px){
-  .blue {
-    background: #84f19c;}
-.header{
-    color:#84f19c;
-}
-.jumbotron{
-    background-color: rgb(234, 238, 234);
-}
-}
-
-@media (max-width: 900px){
-    .blue {
-      background: #c4aae5;
-    }
-    .header{
-        color:#c4aae5;
-    }
-    .jumbotron{
-        background-color: rgb(236, 234, 238);
-  }
-}
-@media (max-width: 700px){
-    .blue {
-    background: #f3bcdd;
-    }
-    .header{
-    color:#f3bcdd;
-    }
-    .jumbotron{
-    background-color: rgb(238, 234, 234);
-    }
-}
-
-  @media (max-width: 500px){
-    .blue {
-      background: #f1c584;
-    }
-    .header{
-        color:#f1c584;
-    }
-    .jumbotron{
-        background-color: rgb(238, 238, 234);
+body {
+    background-image: url(background.jpg);
+    background-size: auto;
+    padding-bottom: 100px;
   }
